; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/sh/extr_fsi.c_fsi_set_fmt_dai.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/sh/extr_fsi.c_fsi_set_fmt_dai.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsi_priv = type { i32, i32 }

@SND_SOC_DAIFMT_FORMAT_MASK = common dso_local global i32 0, align 4
@CR_I2S = common dso_local global i32 0, align 4
@CR_PCM = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fsi_priv*, i32)* @fsi_set_fmt_dai to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fsi_set_fmt_dai(%struct.fsi_priv* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.fsi_priv*, align 8
  %5 = alloca i32, align 4
  store %struct.fsi_priv* %0, %struct.fsi_priv** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @SND_SOC_DAIFMT_FORMAT_MASK, align 4
  %8 = and i32 %6, %7
  switch i32 %8, label %21 [
    i32 129, label %9
    i32 128, label %15
  ]

9:                                                ; preds = %2
  %10 = load i32, i32* @CR_I2S, align 4
  %11 = load %struct.fsi_priv*, %struct.fsi_priv** %4, align 8
  %12 = getelementptr inbounds %struct.fsi_priv, %struct.fsi_priv* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load %struct.fsi_priv*, %struct.fsi_priv** %4, align 8
  %14 = getelementptr inbounds %struct.fsi_priv, %struct.fsi_priv* %13, i32 0, i32 0
  store i32 2, i32* %14, align 4
  br label %24

15:                                               ; preds = %2
  %16 = load i32, i32* @CR_PCM, align 4
  %17 = load %struct.fsi_priv*, %struct.fsi_priv** %4, align 8
  %18 = getelementptr inbounds %struct.fsi_priv, %struct.fsi_priv* %17, i32 0, i32 1
  store i32 %16, i32* %18, align 4
  %19 = load %struct.fsi_priv*, %struct.fsi_priv** %4, align 8
  %20 = getelementptr inbounds %struct.fsi_priv, %struct.fsi_priv* %19, i32 0, i32 0
  store i32 2, i32* %20, align 4
  br label %24

21:                                               ; preds = %2
  %22 = load i32, i32* @EINVAL, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %3, align 4
  br label %25

24:                                               ; preds = %15, %9
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %24, %21
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
